# pybind-sandbox

./: .gitignore  build.sh  main.cpp  publish.sh
.github/workflows/: build.yml
package/: setup.py
package/pybind_sandbox/: __init__.py  __init__.pyi
package/src/: CMakeLists.txt  main.cpp
test/: test.py
